--- a/Authentication/package.json
+++ b/Authentication/package.json
@@ -15,18 +15,18 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^2.0.3",
-    "csurf": "^1.9.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.2.17",
-    "mysql2": "^1.6.1",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "connect-mongodb-session": "^3.1.1",
+    "csurf": "^1.11.0",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1",
+    "mysql2": "^3.2.4",
+    "pug": "^3.0.2",
+    "sequelize": "^6.31.1"
   }
 }
